# libappc

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  biicode.conf  bootstrap.sh  build.sh  test.sh
src/: CMakeLists.txt
src/appc/discovery/: README.md  aci_name.h  discovery.h  fetcher.h  https.h  provider.h  resolver.h  strategy.h  types.h
src/appc/discovery/strategy/: local.h  meta.h  simple.h
src/appc/image/: image.h
src/appc/os/: errno.h  mkdir.h  process.h
src/appc/schema/: README.md  ac_kind.h  ac_name.h  ac_version.h  ackind.h  acversion.h  annotations.h  app.h  app_name.h  app_refs.h  common.h  container.h  dependencies.h  environment.h  event_handlers.h  exec.h  group.h  image.h  image_id.h  image_name.h  imagename.h  isolators.h  labels.h  mount_points.h  path.h  path_whitelist.h  ports.h  try_json.h  user.h  uuid.h  volumes.h
src/appc/util/: namespace.h  option.h  status.h  try.h  try_option.h
src/examples/: parse.cpp  validate_manifest.cpp
src/examples/discovery/: CMakeLists.txt  discover_image.cpp
src/examples/image/: CMakeLists.txt  check.cpp  check_image.cpp  extract_image.cpp  image_file_list.cpp  show_image_manifest.cpp
src/examples/schema/: CMakeLists.txt  generate_complete_crm.cpp  generate_minimal_crm.cpp  parse.cpp  validate.cpp  validate_manifest.cpp
tests/: CMakeLists.txt
tests/unit/appc/schema/: test.cpp  test_ac_kind.cpp  test_ac_kind.h  test_ac_name.cpp  test_ac_name.h  test_ac_version.cpp  test_ac_version.h  test_ackind.h  test_acversion.h  test_annotations.cpp  test_annotations.h  test_app.cpp  test_app.h  test_common.cpp  test_common.h  test_environment.cpp  test_event_handlers.cpp  test_exec.cpp  test_group.cpp  test_image.cpp  test_image.h  test_labels.cpp  test_labels.h  test_mount_points.cpp  test_path.cpp  test_ports.cpp  test_user.cpp  test_uuid.cpp  test_uuid.h
tests/unit/appc/util/: test.cpp  test_option.cpp  test_option.h  test_try.cpp  test_try.h  test_try_option.cpp  test_try_option.h
